BZ#1391295: more edits per peer review
Also removed some unnecessary files.

--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -58,6 +58,6 @@ NOTE: The hostname required here is also the *OS_AUTH_URL* value in the *~/overc
 
 [NOTE]
 ====
-To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment should be on a non-private network.
+To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment be on a non-private network.
 Hence, the OpenStack adminURL endpoint should be assigned an IP address other than `192.168.x.x`. Additionally, all the Keystone endpoints must be accessible, otherwise refresh will fail.
 ====
