--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
@@ -1,7 +1,7 @@
 
 == Adding an OpenStack Infrastructure Provider
 
-After you have deployed your _{product-title}_ appliance, you can begin managing your OpenStack environment by adding it as an _OpenStack Infrastructure provider_. Supply the details of the `admin` account to get access to the resources in the `admin` tenant:
+After you have deployed your _{product-title}_ appliance, you can begin managing your OpenStack environment by adding it as an _OpenStack infrastructure provider_. Supply the details of the `admin` account to get access to the resources in the `admin` tenant:
 
 
 . Navigate to `Infrastructure > Providers`.
@@ -24,11 +24,11 @@ If the keystone service is configured to use SSL, you must enter the keystone SS
 ======
 +
 . Select the appropriate `Zone` for the provider. By default, the zone is set to `default`.
-. In the *Credentials* area, under *Default*, provide the login credentials required for the OpenStack Infrastructure administrative user: 
+. In the *Credentials* area, under *Default*, provide the login credentials required for the OpenStack infrastructure administrative user: 
 * Enter the user name in the *Username* field. 
 * Enter the password in the *Password* field. 
 * Confirm the user password in the *Confirm Password* field. 
-* Click *Validate* to confirm that the _{product-title}_ can connect to the OpenStack Infrastructure instance using the user name and password. 
+* Click *Validate* to confirm that the _{product-title}_ can connect to the OpenStack infrastructure instance using the user name and password. 
 . Under *AMQP*, provide the login credentials required for the Advanced Message Queuing Protocol messaging service: 
 * Enter the administrative user name in the *Username* field. 
 * Enter the user password in the *Password* field. 
