--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
@@ -1,4 +1,4 @@
-After deploying the appliance, log in with the root password `smartvm`. If you deployed the appliance as a VM, you can log in through `virsh`:
+After deploying the appliance, log in with the root password `smartvm`. If you deployed the appliance as a virtual machine, you can log in through `virsh`:
 
 [literal,subs="+quotes"]
 -----------
