--- a/common/openstack/adding-an-openstack-infrastructure-provider.adoc
+++ b/common/openstack/adding-an-openstack-infrastructure-provider.adoc
@@ -1,5 +1,5 @@
-After initial installation and creation of a {product-title} environment, add an OpenStack Infrastructure provider to the appliance. {product-title} supports operating with the OpenStack `admin` tenant.
-When creating an OpenStack Infrastructure provider in {product-title}, select the OpenStack Infrastructure provider's `admin` user because it is the default administrator of the OpenStack `admin` tenant.
+After initial installation and creation of a {product-title} environment, add an OpenStack infrastructure provider to the appliance. {product-title} supports operating with the OpenStack `admin` tenant.
+When creating an OpenStack infrastructure provider in {product-title}, select the OpenStack infrastructure provider's `admin` user because it is the default administrator of the OpenStack `admin` tenant.
 When using the `admin` credentials, a user in {product-title} provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the `admin` tenant.
 
 [NOTE]
@@ -53,5 +53,5 @@ NOTE: For more information, see the definition of host aggregates and availabili
 ====
 {product-title} requires that the `adminURL` endpoint for all OpenStack services be on a non-private network.
 Accordingly, assign the adminURL endpoint an IP address of something other than `192.168.x.x`.
-The `adminURL` endpoint must be accessible to the {product-title} Appliance that is responsible for collecting inventory and gathering metrics from the OpenStack environment. Additionally, all the Keystone endpoints must be accessible, otherwise refresh will fail.
+The `adminURL` endpoint must be accessible to the {product-title} appliance that is responsible for collecting inventory and gathering metrics from the OpenStack environment. Additionally, all the Keystone endpoints must be accessible, otherwise refresh will fail.
 ====
