Added steps on how to configure centralized administration to the section on database replication. Also included a screen capture.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2784,7 +2784,7 @@ Performing this procedure destroys any existing data and cannot be undone. Back 
 
 To configure database replication, you must configure one {product-title} instance to act as a global copy, and one or more other instances to act as remote copies. This database replication relationship can only be configured on {product-title} instances that are of the same version. 
 
-You can also configure centralized administration via database replication settings described in this section. Once configured, {product-title} supports life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy. 
+You can configure centralized administration via the database replication configuration steps described in this section. Once configured, {product-title} supports life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy. 
 
 [NOTE]
 ======
@@ -2831,7 +2831,7 @@ image:centralized_admin_enable.png[Enable Centralized Administration]
 .. In *Central Admin Enabled*, select *Yes* to enable central administration. 
 . Click *Save*.
 
-Database replication and centralized administration is now configured to support life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy.
+Database replication and centralized administration is now configured to support life cycle management operations, including virtual machine power operations and retirement, that can be initiated from the global copy and processed and executed on the remote copy. See the section on _Centralized Administration_ in the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/single/deployment-planning-guide/[Deployment Planning Guide] for an overview of the feature.
 
 [[monitoring_database_replication]]
 ===== Monitoring Database Replication
