Modified the note per SME feedback.

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -61,10 +61,10 @@ With centralized administration, the remote_queue_put leverages a new system-to-
 
 [NOTE]
 ====
-The operations initiated from the global region are subject to the role-based access control (RBAC) rules on the global region, which also includes the role-based access control of all remote regions from replication. 
+The operations initiated from the global region are subject to the role-based access control (RBAC) rules on the remote region. The user in the remote region which matches the logged-in user's *user ID* will be used to enforce RBAC in the target region. The operation will fail on the remote system if the user does not have the required permissions. 
 ====
 
-For information on how to configure centralized administration via database replication, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/single/general-configuration/#configuring_database_replication[Configuring Database Replication and Centralized Administration] in the _General Configuration_ guide.
+For information on how to configure centralized administration via database replication, see the section on _Configuring Database Replication and Centralized Administration_ in the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/single/general-configuration/[General Configuration] guide.
 
 [[tenants]]
 === Tenants
