--- a/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
@@ -39,7 +39,7 @@ include::topics/ose-config-cfmiq.adoc[]
 [[cf-smartproxy]]
 == Enabling SmartState Analysis
 
-include::topics/smartstate.adoc[]
+include::common/smartstate.adoc[]
 
 [[integration]]
 = Adding the OpenShift Deployment as a Container Provider
