--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -310,60 +310,13 @@ Servers with the `RHN Mirror` role also act as a repository for other appliances
 [[registering-appliances]]
 ====== Registering Appliances
 
-Before you can access and apply package updates, you must register and subscribe the {product-title} appliance to either Red Hat Content Delivery Network (CDN) or to a Red Hat Satellite server.
+include::common/configuration-register-appliance.adoc[]
 
-You need the following to register your appliance:
-
-* Your Red Hat account login or Red Hat Network Satellite login
-* A Red Hat subscription that covers your product
-
-To register your appliance with Red Hat Subscription Management or Red Hat Satellite 6, first configure the region with your registration details. These settings will apply to all appliances in this region.
-
-To configure registration for a region:
-
-. Log in to the appliance as the `admin` user.
-. Navigate to menu:Settings[Configuration].
-. Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
-. Click *Edit Registration*.
-. Configure registration details for the {product-title} appliance using one of two available options:
-.. To register with Red Hat Subscription Management:
-... In *Register to*, select *Red Hat Subscription Management*.
-... Enter the *Red Hat Subscription Management Address*. The default is `subscription.rhn.redhat.com`.
-... Enter the *Repository Name(s)*. The default is `cf-me-5.7-for-rhel-7-rpms rhel-server-rhscl-7-rpms`, which are the {product-title} repository and the Red Hat Software Collections repository.
-... To use a HTTP proxy, select *Use HTTP Proxy* and enter your proxy details.
-... Enter your Red Hat account information and click *Validate*.
-... After your credentials are validated, click *Save*.
-.. To register with Red Hat Satellite 6:
-... In *Register to*, select *Red Hat Satellite 6*.
-... Enter the *Red Hat Satellite 6 Address*. The default is `subscription.rhn.redhat.com`.
-... Enter the *Repository Name(s)*. The default is `cf-me-5.7-for-rhel-7-rpms rhel-server-rhscl-7-rpms`, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository.
-... To use a HTTP proxy, select *Use HTTP Proxy* and enter your proxy details.
-... Enter your Red Hat Satellite account information and click *Validate*.
-... After your credentials are validated, click *Save*.
-
-Your appliance now appears in the *Appliance Updates* list as `Not registered`.
-
-To register your appliance:
-
-. Select the appliance from the *Appliance Updates* list.
-. Click *Register* to subscribe the appliance and attach subscriptions.
-
-Registering and attaching subscriptions takes a few minutes. The subscription process is complete when the appliance reports that it is `Subscribed` under *Update Status*, and `Registered` under *Last Message*.
-
-You can now apply updates to your appliance.
 
 [[Updating_Appliances]]
 ====== Updating Appliances
 
-An important part of securing {product-title} is to ensure your appliances use the latest packages.
-Package updates to the appliance contain patches for any software bugs, including possible security bugs.
-
-The *Red Hat Updates* tab enables you to check for updates and update registered appliances. Any services requiring a restart to apply updates are automatically restarted as part of the *Red Hat Updates* process.
-
-. Navigate to menu:Settings[Configuration].
-. Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
-. Click *Check For Updates* to search the Content Delivery Network (CDN) for any updated CloudForms packages. If an appliance update is available, it will be listed with the available version.
-. Click *Apply CFME Update* to install and update {product-title} packages. The {product-title} service will be automatically restarted as needed.
+include::common/configuration-update-appliance.adoc[]
 
 
 [IMPORTANT]
