--- a/doc-Policies_and_Profiles_Guide/topics/Assigning_Policy_Profiles_to_an_Infrastructure_Provider.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Assigning_Policy_Profiles_to_an_Infrastructure_Provider.adoc
@@ -1,12 +1,4 @@
 [[assigning-policy-profiles-to-an-infrastructure-provider]]
 ==== Assigning Policy Profiles to an Infrastructure Provider
 
-. Navigate to menu:Compute[Infrastructure > Providers], verify the provider you need to assign the policy profiles to.
-
-. Click image:../images/1941.png[image] (*Policy*), and then click image:../images/1851.png[image](*Manage Policies*).
-
-. From the *Select Policy Profiles* area, you can click on the triangle next to a desired policy profile to expand it and see its member policies.
-
-. Check the policy profiles you require to apply to the provider. It turns blue to show its assignment state has changed.
-
-. Click *Save*.
+include::common/policies-assigning-profiles-to-infra-hosts.adoc[]
