--- a/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
@@ -33,6 +33,44 @@ include::common/cfme-install-appliance-as-vm.adoc[]
 
 include::topics/configuration-quick.adoc[]
 
+[[registering-appliances]]
+=== Registering Your Appliance
+
+include::common/configuration-register-appliance.adoc[]
+
+[[Updating_Appliances]]
+==== Updating Your Appliance
+
+include::common/configuration-update-appliance.adoc[]
+
+=== Configuring {product-title_short} Metrics for SmartState Analysis
+
+You can also configure {product-title_short} to perform a _SmartState Analysis_. This type of analysis collects details such as accounts, drivers, network information, hardware, and security patches on assets managed by the OpenStack provider. Enabling SmartState Analysis involves two steps:
+
+. xref:cf-caputils[], and 
+. xref:cf-smartproxy[]
+
+These steps are required to allow {product-title_short} to collect metrics from OpenStack and use them to perform a SmartState analysis. You can choose different servers to perform either function; the following sections assume that you will.
+
+
+[[cf-caputils]]
+==== Configuring {product-title_short} Capacity and Utilization
+
+include::common/cap-util-note-metrics-collection.adoc[]
+
+// https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#configuring_openshift_metrics
+
+To enable these server roles:
+
+include::common/cap-util-assign-server-roles.adoc[]
+
+For more information, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#capacity_and_utilization_collection[Capacity and Utilization Collection] from the _Deployment Planning Guide_.
+
+[[cf-smartproxy]]
+==== Enabling SmartState Analysis
+
+include::common/smartstate.adoc[]
+
 == Adding an OpenStack Infrastructure Provider
 
 // see topics/Adding_OpenStack_Providers.adoc for singlesourcable
@@ -44,6 +82,7 @@ include::common/openstack/adding-an-openstack-infrastructure-provider.adoc[]
 
 include::common/openstack/configure-undercloud-to-store-events.adoc[]
 
+[[add-openstack-oc]]
 == Adding an OpenStack Cloud Provider
 
 include::common/openstack/adding-an-openstack-cloud-provider.adoc[]
@@ -53,8 +92,86 @@ include::common/openstack/adding-an-openstack-cloud-provider.adoc[]
 
 include::common/openstack/configure-overcloud-to-store-events.adoc[]
 
+[[perform-smartstate-analysis]]
+== Performing a SmartState Analysis
 
-/////////////////
+Red Hat CloudForms can analyze a cloud Instance or infrastructure host to collect metadata such as user accounts, applications, software patches, and other internal information. This key CloudForms feature is called SmartState Analysis. SmartState analysis can be initiated manually or automatically using Control Policies.
+
+include::common/smartstate-analysis-instances.adoc[]
+
+[[policies]]
+== Managing Policies
+
+include::topics/managing-policies.adoc[]
+
+[[instances]]
+== Managing Instances
+
+Cloud instance provision goes through three phases:
+
+. Request: This includes ownership information, tags, virtual hardware requirements, the operating system, and any customization required. 
+. Approval: Provisioning requests are then approved or denied. This phase can happen automatically or manually.
+. Provision: Approved provisioning requests are executed. 
+
+[[provisioning-an-openstack-instance-from-an-image]]
+=== Provisioning an OpenStack Instance from an Image
+
+include::common/provisioning-requests-openstack.adoc[]
+
+[[catalogs-services]]
+== Catalogs and Services
+
+include::topics/catalogs-services.adoc[]
+
+[NOTE]
+==================
+For more information about catalogs and services, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/single/provisioning-virtual-machines-and-hosts/#catalogs-services[Catalogs and Services] from https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/single/provisioning-virtual-machines-and-hosts/[Provisioning Virtual Machines and Hosts]. 
+==================
+
+[[adding-a-service-dialog]]
+=== Creating a Service Dialog
+
+When provisioning a service, input will be needed from the requester. *Service Dialogs* are used to take input from the user. This input is connected to a method in the *Automate* model that defines how user input is translated into the provision request. Before creating a *Service Dialog*, be sure to plan what items you need the user to input.
+
+include::common/service-dialog-creation.adoc[]
+
+[[creating-an-empty-catalog]]
+=== Creating a Catalog
+
+A catalog is a way to organize or categorize catalog items and bundles. Before you can associate a catalog item into a catalog, create an empty catalog first:
+
+. Navigate to menu:Services[Catalogs].
+. Click the *Catalogs* accordion.
+. Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a New Catalog*).
+. Enter a *Name* and *Description*, leaving everything else blank.
+. Click *Add*.
+
+[[creating-a-catalog-item]]
+==== Creating a Catalog Item
+
+include::catalog-item-creation-openstack.adoc[]
+
+[[ordering-a-catalog-item]]
+==== Ordering a Catalog Item
+
+include::common/catalog-order.adoc[]
+
+
+
+
+[appendix]
+[[provisioning-dialogs-customizing]]
+=== Customizing Provisioning Dialogs
+
+include::common/provisioning-dialogs-customization.adoc[]
+
+[appendix]
+[[provision-keypairs]]
+=== Managing Keypairs
+
+include::common/provisioning-requests-keypairs.adoc[]
+
+///////////////////////////////////////////////////
 include::topics/Adding_OpenStack_Providers.adoc[]
 include::topics/Adding_an_OpenStack_Infrastructure_Provider.adoc[]
 include::topics/CFME_Lifecycle.adoc[]
