--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -47,17 +47,17 @@ endif::cfme[]
 [[central-administration]]
 === Centralized Administration
 
-{product-title} includes centralized administration capabilities with support for the following life cycle management operations that can be initiated from the global region and processed and executed on the remote region.
+{product-title} includes centralized administration capabilities, where operations can be initiated from the global region and processed and executed on the remote region. This includes the following life cycle management operations:
 
-* Virtual machine provision from the global region
-* Invoke service provision request from the global region  
-* Virtual machine power operations from the global region
-* Virtual machine retirement from the global region
-* Virtual machine reconfigure from the global region
+* Virtual machine provisioning
+* Invoke service provisioning
+* Virtual machine power operations
+* Virtual machine retirement
+* Virtual machine reconfiguration
 
 image:centralized_admin.png[Centralized Administration Diagram]
 
-With centralized administration, the remote_queue_put leverages a new system-to-system REST API request to forward the original request to the remote region. This request is put on the local queue in the remote region which is then delivered by a worker in the remote region as if it was queued there all along. As a result, a {product-title_short} operator in the global region can be seen as provisioning on-behalf of a remote region. 
+With centralized administration, the remote_queue_put leverages a new system-to-system REST API request to forward the original request to the remote region. This request is put in the local queue in the remote region, which is then delivered by a worker in the remote region as if it was queued there all along. As a result, a {product-title_short} operator in the global region can be seen as provisioning on behalf of a remote region. 
 
 [NOTE]
 ====
