BZ#1391295: Added more content to OSP+CFME Quickstart
...also single-sourced all possible blocks. In addition, I also
updated the main UI name in from 'Cloud Intelligence' to 'Cloud
Intel' in the 'doc-Monitoring_Alerts_and_Reporting' guide.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Adding_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Adding_a_Report.adoc
@@ -4,7 +4,7 @@
 Add reports if the default reports do not include what you need or you want to narrow the scope of a report.
 For example, you may want a report that shows only Windows virtual machines.
 
-. Navigate to menu:Cloud Intelligence[Reports].
+. Navigate to menu:Cloud Intel[Reports].
 . Click the *Reports* accordion.
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Report*).
 . In the *Columns* tab, edit the *Basic Report Info* area.
