--- a/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
@@ -3,7 +3,7 @@
 
 Download reports to analyze the data using other tools or to print the report.
 
-. Navigate to menu:Cloud Intelligence[Reports].
+. Navigate to menu:Cloud Intel[Reports].
 . Click the report you want to view.
 . Click on the row for the instance of the report you want to download.
   If the report needs to be generated, see <<_sect_running_reports>>.
