--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -4,7 +4,7 @@
 
 {product-title} allows you to assign chargeback rates by choosing from *Compute* and *Storage*.
 
-. Navigate to menu:Cloud Intelligence[Chargeback].
+. Navigate to menu:Cloud Intel[Chargeback].
 . Click the *Assignments* accordion, and click either *Compute* or *Storage*.
 
 ==== Configuring Chargeback for Compute
