--- a/doc-Monitoring_Alerts_and_Reporting/topics/Deleting_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Deleting_a_Report.adoc
@@ -5,7 +5,7 @@ Delete reports when you find that they are no longer useful.
 Only administrators and super administrators of {product-title} can add, copy, edit, and delete reports.
 Note that only customer-created reports can be deleted.
 
-. Navigate to menu:Cloud Intelligence[Reports].
+. Navigate to menu:Cloud Intel[Reports].
 . Click the *Reports* accordion and select the report you want to delete.
 . Click  image:1847.png[] (*Configuration*),  image:1861.png[] (*Delete this Report from the Database*).
 +
