--- a/doc-Monitoring_Alerts_and_Reporting/topics/Exporting_a_Widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Exporting_a_Widget.adoc
@@ -3,7 +3,7 @@
 
 You can share widgets between appliances using the export and import features.
 
-. Navigate to menu:Cloud Intelligence[Reports].
+. Navigate to menu:Cloud Intel[Reports].
 . In the *Import/Export* accordion, click *Widgets*.
 . In the *Export* area, select the widgets that you want to export.
 . Click *Export*. 
