--- a/doc-Monitoring_Alerts_and_Reporting/topics/Reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Reports.adoc
@@ -7,19 +7,7 @@ From here, you can also create reports if you have appropriate access.
 {product-title} provides a large group of default reports organized into categories.
 Each category has its own set of subfolders.
 
-* Use *Configuration Management* to see hardware, application, network, service, user account, operating system, and snapshot information for all of your items.
-* Use *Migration Readiness* to see information specifically related to items required to migrate a virtual machine.
-* Use *Operations* to look at free space on registered and unregistered virtual machines, to see power states for virtual machines, and see which offline virtual machines have snapshots or have never been analyzed.
-  You are also provided with reports specifically related to the operation of {product-title}, such as user ids and snapshots taken by {product-title}.
-* Use *VM Sprawl* to check on usage information and disk waste.
-* Use *Relationships* to see virtual machine, folder, and cluster relationships.
-* Use *Events* to view operations and configuration management events.
-* Use *Performance by Asset Type* to see a report on the performance of your virtual infrastructure.
-  You must be capturing capacity and utilization data to get this information.
-* Use *Running Processes* to view the information on processes running on a virtual machine.
-  You must have domain credentials entered for the zone to collect the info for these reports, and the virtual machine must have been analyzed at least once.
-* *Trending* shows projections of datastore capacity and host CPU and memory use.
-* *Provisioning* shows provisioning activity based on the approver, datastore, requester, and virtual machine.
+include::common/reports-categories.adoc[]
 
 For a complete list of reportable fields in {product-title}, see xref:_appe_reportable_fields[].
 
