--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_report_widget_as_a_file.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_report_widget_as_a_file.adoc
@@ -2,7 +2,7 @@
 === Downloading a Report Widget as a File
 
 
-. Navigate to menu:Cloud Intelligence[Dashboard].
+. Navigate to menu:Cloud Intel[Dashboard].
 . From the chart or report widget that you want to download as a PDF, click  image:2134.png[] *[(Download PDF)* in the upper right corner of the widget.
 . Click *OK*.
 
