--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
@@ -4,7 +4,7 @@
 Reports are stored in the VMDB; however, you can share customized reports among VMDBs.
 To do this use the export and import feature of reports.
 
-. Navigate to menu:Cloud Intelligence[Reports].
+. Navigate to menu:Cloud Intel[Reports].
 . In the *Import/Export* accordion, click *Custom Reports*.
 . In the *Export* area, select the reports to export.
 . Click *Export*.
