--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_open_a_chart_or_report_widget_in_its_own_window.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_open_a_chart_or_report_widget_in_its_own_window.adoc
@@ -1,7 +1,7 @@
 [[_to_open_a_chart_or_report_widget_in_its_own_window]]
 === Opening a Chart or Report Widget in Its Own Window
 
-. Navigate to menu:Cloud Intelligence[Dashboard].
+. Navigate to menu:Cloud Intel[Dashboard].
 . From the chart or report widget that you want to enlarge, click  image:2262.png[] *(Open the chart and full report in new window)* in the upper right corner of the widget. 
 . Click *OK*.
 
