--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_remove_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_remove_a_widget.adoc
@@ -4,7 +4,7 @@
 
 You can remove a widget when you no longer need the widget to be displayed in the dashboard.
 
-. Navigate to menu:Cloud Intelligence[Dashboard].
+. Navigate to menu:Cloud Intel[Dashboard].
 . From the widget that you want to remove, click  image:2260.png[] *(Remove from Dashboard)* in the upper right corner of the widget. 
 . Click *OK*.
 
