--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/catalogs-services.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/catalogs-services.adoc
@@ -9,3 +9,35 @@ Creating a _service catalog_ involves:
 . Creating a _method_ for the *Service Dialog*. This method defines what each option means to each individual cloud instances for the service. This method is called from a service provisioning instance in the *Automate* model.
 
 
+[NOTE]
+==================
+For more information about catalogs and services, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/single/provisioning-virtual-machines-and-hosts/#catalogs-services[Catalogs and Services] from https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/single/provisioning-virtual-machines-and-hosts/[Provisioning Virtual Machines and Hosts]. 
+==================
+
+[[adding-a-service-dialog]]
+=== Creating a Service Dialog
+
+When provisioning a service, input will be needed from the requester. *Service Dialogs* are used to take input from the user. This input is connected to a method in the *Automate* model that defines how user input is translated into the provision request. Before creating a *Service Dialog*, be sure to plan what items you need the user to input.
+
+include::common/service-dialog-creation.adoc[]
+
+[[creating-an-empty-catalog]]
+=== Creating a Catalog
+
+A catalog is a way to organize or categorize catalog items and bundles. Before you can associate a catalog item into a catalog, create an empty catalog first:
+
+. Navigate to menu:Services[Catalogs].
+. Click the *Catalogs* accordion.
+. Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a New Catalog*).
+. Enter a *Name* and *Description*, leaving everything else blank.
+. Click *Add*.
+
+[[creating-a-catalog-item]]
+==== Creating a Catalog Item
+
+include::catalog-item-creation-openstack.adoc[]
+
+[[ordering-a-catalog-item]]
+==== Ordering a Catalog Item
+
+include::common/catalog-order.adoc[]
