--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
@@ -50,4 +50,40 @@ You can access and configure most {product-title} settings through the *Configur
 
 include::common/configuration-gui.adoc[]
 
+[[registering-appliances]]
+=== Registering Your Appliance
 
+include::common/configuration-register-appliance.adoc[]
+
+[[Updating_Appliances]]
+==== Updating Your Appliance
+
+include::common/configuration-update-appliance.adoc[]
+
+=== Configuring {product-title_short} Metrics for SmartState Analysis
+
+You can also configure {product-title_short} to perform a _SmartState Analysis_. This type of analysis collects details such as accounts, drivers, network information, hardware, and security patches on assets managed by the OpenStack provider. Enabling SmartState Analysis involves two steps:
+
+. xref:cf-caputils[], and 
+. xref:cf-smartproxy[]
+
+These steps are required to allow {product-title_short} to collect metrics from OpenStack and use them to perform a SmartState analysis. You can choose different servers to perform either function; the following sections assume that you will.
+
+
+[[cf-caputils]]
+==== Configuring {product-title_short} Capacity and Utilization
+
+include::common/cap-util-note-metrics-collection.adoc[]
+
+// https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#configuring_openshift_metrics
+
+To enable these server roles:
+
+include::common/cap-util-assign-server-roles.adoc[]
+
+For more information, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#capacity_and_utilization_collection[Capacity and Utilization Collection] from the _Deployment Planning Guide_.
+
+[[cf-smartproxy]]
+==== Enabling SmartState Analysis
+
+include::common/smartstate.adoc[]
