Small grammar fix.

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -50,7 +50,7 @@ endif::cfme[]
 {product-title} includes centralized administration capabilities, where operations can be initiated from the global region and processed and executed on the remote region. This includes the following life cycle management operations:
 
 * Virtual machine provisioning
-* Invoke service provisioning
+* Service provisioning
 * Virtual machine power operations
 * Virtual machine retirement
 * Virtual machine reconfiguration
