Added a miq version of the OSP quick start guide.

--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
@@ -50,6 +50,7 @@ You can access and configure most {product-title} settings through the *Configur
 
 include::common/configuration-gui.adoc[]
 
+ifdef::cfme[]
 [[registering-appliances]]
 === Registering Your Appliance
 
@@ -59,6 +60,7 @@ include::common/configuration-register-appliance.adoc[]
 ==== Updating Your Appliance
 
 include::common/configuration-update-appliance.adoc[]
+endif::cfme[]
 
 === Configuring {product-title_short} Metrics for SmartState Analysis
 
