--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/reports.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/reports.adoc
@@ -1,6 +1,6 @@
-Red Hat CloudForms provides a large group of default reports organized into categories. Each category has its own set of subfolders. These reports have been constructed to help you view the most commonly requested and significant data.
+{product-title} provides a large group of default reports organized into categories. Each category has its own set of subfolders. These reports have been constructed to help you view the most commonly requested and significant data.
 
-The categories of predefined reports available on CloudForms are:
+The categories of predefined reports available on {product-title} are:
 
 include::common/reports-categories.adoc[]
 
