PR Review changes, fixed wording and italicized anded and or.
- Incorrect wording in bulk query page
- Italicized anded and or in filtering page

--- a/api/overview/bulk_query.adoc
+++ b/api/overview/bulk_query.adoc
@@ -39,7 +39,7 @@ specified by different relevant attributes. These include:
 | guid  (_if applicable_)
 |=======================================================================
 
-Select other attributes can also be used as identifying attributes
+Some other attributes can also be used as identifying attributes
 as shown in the following table:
 
 [cols="1,2",options="header",width="60%"]
