--- a/api/overview/filtering.adoc
+++ b/api/overview/filtering.adoc
@@ -15,7 +15,7 @@ Syntax for a filter is as follows:
 filter[]=attribute op value
 ----
 
-By default, filters are logically anded together, for a logical or, prefix the attribute with "or" as follows:
+By default, filters are logically _anded_ together, for a logical or, prefix the attribute with _or_ as follows:
 
 ----
 filter[]=or attribute op value
