BZ#1391295: Removed unsupported installation method
...and replaced it with links to the list of installation docs
we have.

--- a/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
@@ -14,22 +14,10 @@ include::common/attributes/cfme.adoc[]
 include::topics/common/introduction.adoc[]
 
 [[installing-cloudforms]]
-== Installing {product-title_short}
+== Installing and Configuring {product-title}
 include::topics/installing.adoc[]
 
-=== Obtaining the {product-title} Appliance
-
-include::common/cfme-obtaining-the-appliance.adoc[]
-
-=== Deploying the Appliance as a Virtual Machine
-
-Upon obtaining the {product-title} appliance, deploy it in a network where it can communicate with the OpenStack management network. You can deploy the appliance on bare metal or as a virtual machine.
-
-To deploy the appliance as a virtual machine, perform the following steps:
-
-include::common/cfme-install-appliance-as-vm.adoc[]
-
-== Configuring {product-title}
+=== Configuring {product-title}
 
 include::topics/configuration-quick.adoc[]
 
