update monitoring and reporting guide per reviewer suggestions

--- a/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
@@ -18,7 +18,7 @@ include::topics/Creating_Dashboard_Widgets.adoc[]
 
 include::topics/Reports.adoc[]
 
-include::topics/Usage.adoc[]
+// include::topics/Usage.adoc[]
 
 include::topics/Chargeback.adoc[]
 
