--- a/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
@@ -8,10 +8,10 @@ The following procedure creates an alert for when a host's datastore has less th
 . Click on the *Alerts* accordion, then click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Alert*).
 . In the *Info* area:
 +
-image:1985.png[]
+image:expressionAlerts.png[]
 +
 * Type in a description for the alert.
-* From *Based On*, select *Host*.
+* From *Based On*, select *Host/Node*.
 * For *What to Evaluate*, select *Expression (Custom)*.
 * In *Notification Frequency*, select how often you want to be notified if the expression is evaluated to true.
 
@@ -20,7 +20,7 @@ image:1985.png[]
 ifdef::cfme[For details on how to use the expression editor, see the _Policies and Profiles Guide_.]
 ifdef::miq[For details on how to use the expression editor, see the Policies and Profiles Guide.]
 +
-image:1986.png[]
+image:expressionEditor.png[]
 +
 . Click  image:1863.png[] (*Commit expression element changes*) to accept the expression.
 . After setting the parameters, you then select what you want the alert to do.
