--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
@@ -10,20 +10,16 @@ The following example shows steps to check the host's log for a failure to valid
 . Click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Alert*).
 . In the *Info* area:
 +
-
-image:1981.png[]
+image:hostdLodAlert.png[]
 +
 * Type in a *Description* for the alert.
-* From *Based On*, select *Host*.
+* From *Based On*, select *Host/Node*.
 * For *What to Evaluate*, select *Hostd Log Threshold*.
 * In *Notification Frequency*, select how often you want to be notified if the log item is detected.
 
 . In the *Hostd Log Threshold Parameters* area, select the parameters for the event log message.
   You can set a threshold for a filter, level, or message source.
-+
 
-image:1982.png[]
-+
 * Use *Message Filter* to look for specific text in a message.
   Use *Message Level* to filter based on message level.
   {product-title} reports on the specified level and above.
