--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
@@ -19,7 +19,7 @@ To configure this rate:
 
 . Navigate to menu:Cloud Intelligence[Chargeback].
 . Click the *Rates* accordion and select *Compute* to create a CPU chargeback rate.
-. Click  image:1847.png[] *(Configuration)* and  image:1862.png[] *(Add a new Chargeback Rate)*.
+.. Click  image:1847.png[] *(Configuration)* and  image:1862.png[] *(Add a new Chargeback Rate)*.
 . Type in a *Description* for the chargeback rate.
 . Select *Euro* for currency.
 . In *Rate Details*, select the time, and fill in the range and rates for each tier. Alternatively, a single chargeback rate can be configured by using only one tier. For this example, in *Allocated CPU Count*, configure:
