--- a/doc-Monitoring_Alerts_and_Reporting/topics/running_reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/running_reports.adoc
@@ -1,5 +1,5 @@
 
-[[_sect_running_reports]]
+[[running_reports]]
 === Running Reports
 
 There are two different ways to generate a report: by scheduling the report, or running the report manually by clicking the report generation button on the *Reports* page.
