--- a/doc-Monitoring_Alerts_and_Reporting/topics/Adding_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Adding_a_Report.adoc
@@ -5,8 +5,8 @@ Add reports if the default reports do not include what you need or you want to n
 For example, you may want a report that shows only Windows virtual machines.
 
 . Navigate to menu:Cloud Intelligence[Reports].
-. Click the *Reports* accordion.
-. Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Report*).
+. Click the menu:Reports[All Reports] accordion.
+. Click  image:1847.png[] *(Configuration)*, then click  image:1862.png[] *(Add a New Report)*.
 . In the *Columns* tab, edit the *Basic Report Info* area.
 +
 
@@ -30,7 +30,8 @@ NOTE: If you change the report base or the interval, all selections below will b
 
 . Click on the *Consolidation* tab to consolidate and aggregate data points into maximum, minimum, average, and total.
   Specifically, this would be useful for analyzing performance data over a specific period of time.
-  Note that if you do this, you will not see individual records, but rather the calculation as a column header.
++  
+NOTE: Please note that if you do this, you will not see individual records, but rather the calculation as a column header.
 +
 
 image:2291.png[]
@@ -124,7 +125,7 @@ image:2302.png[]
   This is not required.
 +
 
-image:2303.png[]
+image:chartsScreen.png[]
 +
 * Use *Choose a chart type* to select a type of chart.
   Note that some charts may not produce the result you are looking for based on the types of fields in the report and its sort order.
