--- a/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
@@ -6,11 +6,11 @@ Download reports to analyze the data using other tools or to print the report.
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the report you want to view.
 . Click on the row for the instance of the report you want to download.
-  If the report needs to be generated, see <<_sect_running_reports>>.
+  If the report needs to be generated, see <<running_reports>>.
 . Click on the report download buttons for the type of export you want.
 +
-* Click  image:2133.png[] *(Download this report in text format)* to download as text.
-* Click  image:2133.png[] *(Download this report in csv format)* to download as a comma-separated file.
+* Click  image:textImage.png[] *(Download this report in text format)* to download as text.
+* Click  image:textImage.png[] *(Download this report in csv format)* to download as a comma-separated file.
 * Click  image:2134.png[] *(Download this report in PDF format)* to download as PDF.
 * The report is automatically named with the type of report and date.
 
