--- a/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
@@ -6,7 +6,7 @@ You can export and import for use with other {product-title} infrastructures.
 
 . Copy the file to import to a location that is accessible to your {product-title} Console.
 . Navigate to menu:Control[Import/Export].
-. Click *Browse* to navigate to the location of the file.
+. Click *Choose file* to navigate to the location of the file.
 . Select the file, and then click *Open* from the file selection box. 
 . Click *Upload*.
 . Verify that these are the policies or policy profiles that you want to import.
