--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_a_single_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_a_single_report.adoc
@@ -2,7 +2,7 @@
 ==== Generating a Single Report
 
 . Navigate to menu:Cloud Intelligence[Reports]
-. Click the *Reports* accordion and select the report you want to view.
+. Click the menu:Reports[All Reports] accordion. Navigate to the report you want to view by selecting the appropriate folder. 
 . Click  image:1847.png[] (*Queue*).
 . The report generation is placed on the queue and its status shows in the reports page.
 +
