--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -4,28 +4,39 @@
 You can view historical data by creating reports on a scheduled basis.
 In addition, scheduled reports can be emailed directly to users.
 
-. There are two ways to schedule a report.
-  Select a report from the Reports accordion and click  image:1847.png[] *Configuration*,  image:1862.png[] *Add a New Schedule*, or click the Schedules accordion and click  image:1847.png[] *Configuration*,  image:1862.png[] *Add a New Schedule*.
-+
+NOTE: You may need to disable, change the report filter, or change the frequency of a schedule.
+To do this, you will need to edit the schedule.
 
-image:2277.png[]
-+
-* In the *Basic Information* area, type in a *Name* and *Description* for the schedule.
+There are two ways to schedule a report:
+
+Add a new Schedule through the *Reports* accordion:
+
+. Navigate to menu:Cloud Intel[Reports]
+. Select a report from the *Reports* accordion and click  image:1847.png[] *Configuration*.
+. Click image:1862.png[] *Add a New Schedule*. or click the Schedules accordion and click  image:1847.png[] *Configuration*,  image:1862.png[] *Add a New Schedule*.
+
+or
+
+Add a new Schedule through the *Schedules* accordion:
+
+. Navigate to menu:Cloud Intel[Reports]
+. Click the *Schedules* accordion. 
+. Click image:1847.png[] *Configuration*.
+. Click  image:1862.png[] *Add a New Schedule*.
+
+Adding new Schedule details.
+
+
+. In the *Basic Information* area, type in a *Name* and *Description* for the schedule.
 * By default. *Active* is checked to enable the scan.
-* Check *E-Mail after Running* to send an email after the report has been generated. The email will be sent to the users email address as show in the *Accounts* area in *Configuration*. The email will include a link to the report.
 
 . The *Report Selection* area is pre-populated if you added the schedule directly from the report.
   If you are adding from the schedule according, use the *Filter* drop downs to select the report that you want to schedule.
-+
 
-image:2278.png[]
 
 . In the *Timer* area, click the *Run* drop down to specify how often you want the analysis to run.
   Your options after that will depend on which run option you choose.
-+
 
-image:2279.png[]
-+
 * Click *Once* to have the analysis run just one time.
 * Click *Daily* to run the analysis on a daily basis.
   You will be prompted to select how many days you want between each analysis.
@@ -34,11 +45,8 @@ image:2279.png[]
 * Type or select a date to begin the schedule in *Starting Date*.
 * Select a *Starting Time* based on a 24 hour clock in the {product-title} appliance's Time Zone.
 
-. To send an email that includes an attachment with the report contents, check *Send an E-mail*. Parameters required for sending an email are displayed.
-+
-
-image:2281.png[]
-
+. Use the *E-Mail after Running* feature to send an email after the report has been generated to selected users. The email will include a link to the report.
+* check *Send an E-mail*. 
 * In *From (leave blank for default)*, type in the sending email.
 * Use *Add a User*, to select a specific user.
   The user must have a valid email address entered under accounts.
@@ -46,17 +54,17 @@ image:2281.png[]
 * Then, click  image:1862.png[] *(Add)*.
 
 . If you are sending an email after the report runs, then you can select further options under Email Options.
-+
 
-image:2283.png[]
-+
 * Check *Send if Report is Empty* if you want an email even if no records exist in the report.
 * Next to Attachments, check if you would like the report attached as a *Text*, *CSV*, or *PDF* file.
 
-. Click *Add*.
+. Click *Add*
 
-NOTE: You may need to disable, change the report filter, or change the frequency of a schedule.
-To do this, you will need to edit the schedule.
+NOTE: See the [General Configuration](https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/paged/general-configuration/) guide, to learn how to verify the address and validate outgoing email settings.
+
+
+
+
 
 
 
