added version mention after Loic's review

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -236,6 +236,7 @@ A *Container Templates* summary page allows you to view different aspects of a c
 * What project is the template associated with?
 * What objects does the template contain?
 * What parameters can be used with the template's objects?
+* What is the template's version number?
 
 .Viewing a Container Templates Summary
 . Navigate to menu:Compute[Containers > Providers].
